[project]
name = "sports"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.13",
    "dagster-duckdb>=0.27.13",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "streamlit>=1.50.0",
    "streamlit-searchbox>=0.1.23",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "sports"
registry_modules = [
    "sports.components.*",
]


